plugins {
    id 'java'
}

group 'com.codeclan.fantasygame'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'org.postgresql', name: 'postgresql', version: '9.4.1212'
    compile group: 'org.hibernate', name: 'hibernate-core', version: '4.3.5.Final'
    compile group: 'org.javassist', name: 'javassist', version: '3.12.1.GA'
}
